--- a/package.json
+++ b/package.json
@@ -2,20 +2,28 @@
   "name": "vite-react-electron",
   "version": "1.0.1",
   "description": "Vite React Electron boilerplate.",
-  "author": "草鞋没号 <308487730@qq.com>",
+  "author": "laoli",
   "license": "MIT",
   "main": "dist/main/index.cjs",
   "scripts": {
     "dev": "node scripts/watch.mjs",
-    "build": "node scripts/build.mjs"
+    "build": "node scripts/build.mjs",
+    "postinstall": "electron-builder install-app-deps"
   },
   "engines": {
     "node": ">=14.17.0"
   },
   "dependencies": {
+    "@electron/remote": "^2.0.1",
+    "about-window": "^1.15.2",
     "antd": "^4.16.13",
+    "events": "^3.3.0",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-router-dom": "^6.0.2",
+    "robotjs": "^0.6.0",
+    "vkey": "^1.0.1",
+    "ws": "^8.3.0"
   },
   "devDependencies": {
     "@types/react": "^17.0.33",
@@ -23,6 +31,7 @@
     "@vitejs/plugin-react": "^1.0.7",
     "electron": "^15.3.0",
     "electron-builder": "^22.13.1",
+    "electron-builder-squirrel-windows": "^22.14.10",
     "electron-store": "^8.0.1",
     "less": "^4.1.2",
     "typescript": "^4.4.4",
